Added metadata to define cover images. Fixed 60min bug in episode timestamps. Added missing episode durations + re-inferred timestamps. Improve trivia/syopsis formatting in UI
