# gui/src/assets/swagger.json
@@ -2186,6 +2186,12 @@
           },
           "version": {
             "type": "string"
+          },
+          "metadata": {
+            "type": "object",
+            "additionalProperties": {
+              "type": "string"
+            }
           }
         }
       },
